[fix] fixing dark mode bug 2
Ver. 2.6.2

fixing dark mode bug - done

--- a/css/dark_mode.css
+++ b/css/dark_mode.css
@@ -11,9 +11,10 @@ a{
 .scroll_to{
     color: #7D7D7D;
 }
-/* .scroll_section li::after {
+.scroll_section li::after {
     background: #A1E3FF;
-} */
+    opacity: .7;
+}
 
 .sections div h1{
     -webkit-text-stroke: 1px #fff;
