--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,10 @@ main {
     text-decoration: none;
 }
 
-
+.menu_text p {
+    position: relative;
+    z-index: 10;
+}
 
 .scroll_section li::after {
     content: '';
@@ -117,7 +120,7 @@ main {
     position: absolute;
     bottom: 15;
     left: -10px;
-    z-index: -10;
+    z-index: 2;
     transform: scale(0, 1);
     transform-origin: left top;
     transition: transform .3s;
